# CMakeCICD

./: .gitignore  CMakeLists.txt  CMakePresets.json  Entity.cpp  Entity.h  Header.h  HealthComponent.cpp  HealthComponent.h  IDamagable.h  List.cpp  List.h  Source.cpp  temp.cpp
.github/workflows/: cmake-multi-platform.yml
Items/: Item.h
Tests/: HealthComponentTests.cpp  ItemsTests.cpp  ListTests.cpp
